--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# ======================================
+# Python .gitignore
+# ======================================
+
+# Project
+.ruff_cache/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
